force-app/main/default/objects/Order/fields/Logistics_Status__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Status__c</fullName>
    <description>Estado exclusivo del flujo logístico. Al cambiar a &quot;Ready to Ship&quot; se activará de forma automática el trigger de integración.</description>
    <inlineHelpText>Estado actual del proceso logístico del paquete.</inlineHelpText>
    <label>Logistics Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Ready to Ship</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>