force-app/main/default/objects/Order/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Prioridad operativa del pedido utilizada para la clasificación y orden de preparación en el almacén.</description>
    <inlineHelpText>Indica el nivel de urgencia para la gestión de los tiempos de preparación de la expedición.</inlineHelpText>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>