force-app/main/default/objects/Order/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cuenta de destino a la que se envía físicamente la mercancía (Ship To), desvinculada de la cuenta principal de facturación.</description>
    <inlineHelpText>Selecciona la cuenta o sucursal física donde se debe entregar el pedido</inlineHelpText>
    <label>Ship To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>