force-app/main/default/objects/Order/recordTypes/Sale_Order.recordType-meta.xml
<RecordType>
    <fullName>Sale_Order</fullName>
    <active>true</active>
    <description>Para las expediciones/ventas</description>
    <label>Sale Order</label>
</RecordType>